--- a/action.yaml
+++ b/action.yaml
@@ -1,30 +1,14 @@
-name: Setup Exoscale
+name: Setup SOPS
 author: nhedger
-description: Setup Exoscale CLI in GitHub Actions
+description: Setup SOPS in GitHub Actions
 branding:
-  color: white
-  icon: terminal
+  color: gray-dark
+  icon: lock
 inputs:
   version:
-    description: The version of the Exoscale CLI to install
+    description: The version of SOPS to install
     required: true
     default: latest
-  authenticate:
-    description: Authenticate the Exoscale CLI
-    required: false
-  account:
-    description: The Exoscale account name
-    required: false
-  zone:
-    description: The Exoscale default zone
-    required: true
-    default: ch-gva-2
-  key:
-    description: The Exoscale API key
-    required: false
-  secret:
-    description: The Exoscale API secret
-    required: false
 runs:
   using: 'node16'
   main: 'dist/index.mjs'
