--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "scripts": {
     "build": "unbuild",
-    "package": "ncc build build/index.mjs -o dist"
+    "package": "ncc build build/index.mjs -o dist",
+    "format": "rome format --write .",
+    "ci:format": "rome format",
+    "lint": "rome check --apply",
+    "ci:lint": "rome check"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +27,7 @@
     "@types/node": "^18.16.3",
     "@vercel/ncc": "^0.36.1",
     "prettier": "^2.8.8",
+    "rome": "^12.1.3",
     "unbuild": "^1.2.1"
   },
   "packageManager": "pnpm@8.3.1"
