--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -28,3 +28,25 @@ jobs:
 
       - name: Package action
         run: pnpm package
+
+  coding-standards:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16.x
+
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        run_install: true
+
+    - name: Check format with Rome
+      run: pnpm ci:format
+
+    - name: Lint with Rome
+      run: pnpm ci:lint
