chore: add missing path

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "unbuild",
     "package": "ncc build build/index.mjs -o dist",
     "format": "rome format --write .",
-    "ci:format": "rome format",
-    "lint": "rome check --apply",
-    "ci:lint": "rome check"
+    "ci:format": "rome format .",
+    "lint": "rome check --apply .",
+    "ci:lint": "rome check ."
   },
   "keywords": [],
   "author": "",
