--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "package": "ncc build build/index.mjs -o dist",
     "format": "rome format --write .",
     "ci:format": "rome format .",
-    "lint": "rome check --apply .",
+    "lint": "rome check .",
     "ci:lint": "rome check ."
   },
   "keywords": [],
