--- a/.editorconfig
+++ b/.editorconfig
@@ -2,14 +2,13 @@ root = true
 
 [*]
 charset = utf-8
-indent_size = 4
-indent_style = space
+indent_size = 2
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
 insert_final_newline = false
-indent_size = 2
 
 [*.{yml,yaml}]
 indent_size = 2
