--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -45,8 +45,5 @@ jobs:
       with:
         run_install: true
 
-    - name: Check format with Rome
-      run: pnpm ci:format
-
-    - name: Lint with Rome
-      run: pnpm ci:lint
+    - name: Run Rome
+      run: pnpm rome ci
