--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "scripts": {
     "build": "unbuild",
+    "prepackage": "npm run build",
     "package": "ncc build build/index.mjs -o dist",
     "format": "rome format --write .",
-    "lint": "rome check --apply-unsafe ."
+    "lint": "rome check --apply-unsafe .",
+    "postinstall": "lefthook install"
   },
   "keywords": ["mozilla", "sops", "github-actions"],
   "author": {
@@ -27,6 +29,7 @@
     "@octokit/types": "^9.2.0",
     "@types/node": "^18.16.3",
     "@vercel/ncc": "^0.36.1",
+    "lefthook": "^1.4.1",
     "rome": "^12.1.3",
     "unbuild": "^1.2.1"
   }
