--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: 16.x
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Build action
         run: npm run build
 
