--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -35,15 +35,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup Node
-      uses: actions/setup-node@v4
-      with:
-        node-version: 16.x
+    - name: Setup Biome
+      uses: biomejs/setup-biome@v1
 
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v2
-      with:
-        run_install: true
-
-    - name: Run Rome
-      run: pnpm rome ci .
+    - name: Run Biome
+      run: biome ci.
