--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,10 @@
 {
-	"$schema": "./node_modules/rome/configuration_schema.json",
+	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
 		"ignore": ["build", "dist", "node_modules"]
 	},
 	"formatter": {
-		"indentSize": 4,
+		"indentWidth": 4,
 		"indentStyle": "tab",
 		"lineWidth": 120
 	},
