--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-  "name": "setup-sops",
-  "description": "Setup SOPS in GitHub Actions",
-  "scripts": {
-    "build": "unbuild",
-    "prepackage": "npm run build",
-    "package": "ncc build build/index.mjs -o dist",
-    "format": "biome format --write .",
-    "lint": "biome check --apply-unsafe .",
-    "check": "biome check . --apply-unsafe",
-    "postinstall": "lefthook install"
-  },
-  "keywords": [
-    "mozilla",
-    "sops",
-    "github-action"
-  ],
-  "author": {
-    "name": "Nicolas Hedger",
-    "email": "nicolas@hedger.ch"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.10.1",
-    "@actions/tool-cache": "^2.0.1",
-    "@octokit/auth-action": "^4.0.1",
-    "@octokit/request-error": "^6.0.1",
-    "@octokit/rest": "^20.0.2",
-    "ts-dedent": "^2.2.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
-    "@hedger/prettier-config": "^1.2.0",
-    "@octokit/types": "^12.6.0",
-    "@types/node": "^18.19.2",
-    "@vercel/ncc": "^0.38.1",
-    "lefthook": "^1.6.2",
-    "unbuild": "^2.0.0"
-  },
-  "packageManager": "pnpm@8.3.1"
+	"name": "setup-sops",
+	"description": "Setup SOPS in GitHub Actions",
+	"scripts": {
+		"build": "unbuild",
+		"prepackage": "npm run build",
+		"package": "ncc build build/index.mjs -o dist",
+		"format": "biome format --write .",
+		"lint": "biome check --apply-unsafe .",
+		"check": "biome check . --apply-unsafe",
+		"postinstall": "lefthook install"
+	},
+	"keywords": ["mozilla", "sops", "github-action"],
+	"author": {
+		"name": "Nicolas Hedger",
+		"email": "nicolas@hedger.ch"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@actions/core": "^1.10.1",
+		"@actions/tool-cache": "^2.0.1",
+		"@octokit/auth-action": "^4.1.0",
+		"@octokit/request-error": "^6.1.0",
+		"@octokit/rest": "^20.1.0",
+		"ts-dedent": "^2.2.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.6.4",
+		"@hedger/prettier-config": "^1.2.0",
+		"@octokit/types": "^12.6.0",
+		"@types/node": "^18.19.31",
+		"@vercel/ncc": "^0.38.1",
+		"lefthook": "^1.6.10",
+		"unbuild": "^2.0.0"
+	},
+	"packageManager": "pnpm@8.3.1"
 }
