--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
 		"check": "biome check . --apply-unsafe",
 		"postinstall": "lefthook install"
 	},
-	"keywords": ["mozilla", "sops", "github-action"],
+	"keywords": [
+		"mozilla",
+		"sops",
+		"github-action"
+	],
 	"author": {
 		"name": "Nicolas Hedger",
 		"email": "nicolas@hedger.ch"
@@ -19,7 +23,6 @@
 	"dependencies": {
 		"@actions/core": "^1.10.1",
 		"@actions/tool-cache": "^2.0.1",
-		"@octokit/auth-action": "^4.1.0",
 		"@octokit/request-error": "^6.1.0",
 		"@octokit/rest": "^20.1.0",
 		"ts-dedent": "^2.2.0"
@@ -27,7 +30,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.6.4",
 		"@hedger/prettier-config": "^1.2.0",
-		"@octokit/types": "^12.6.0",
+		"@octokit/auth-action": "^5.1.0",
+		"@octokit/types": "^13.4.0",
 		"@types/node": "^18.19.31",
 		"@vercel/ncc": "^0.38.1",
 		"lefthook": "^1.6.10",
