--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
 		"check": "biome check . --apply-unsafe",
 		"postinstall": "lefthook install"
 	},
-	"keywords": [
-		"mozilla",
-		"sops",
-		"github-action"
-	],
+	"keywords": ["mozilla", "sops", "github-action"],
 	"author": {
 		"name": "Nicolas Hedger",
 		"email": "nicolas@hedger.ch"
