fix: rename `mozilla` org to `getsops`
fixes #60

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check": "biome check . --apply-unsafe",
 		"postinstall": "lefthook install"
 	},
-	"keywords": ["mozilla", "sops", "github-action"],
+	"keywords": ["getsops", "sops", "github-action"],
 	"author": {
 		"name": "Nicolas Hedger",
 		"email": "nicolas@hedger.ch"
